Fixed small bugs in navbar, footer and cards. Everything is well in place now. Added a Slice 100 to the for loop on the main page, to stop showing the 300 articles non stop.

--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -4,25 +4,28 @@
 
 {% block body %}
     <p>Number of articles: {{ articles | length }}</p>
-    {% for article in articles %}
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+    {% for article in articles |slice(0, 100) %}
 
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-            <div class="card h-100">
-                <img src="{{ article.image_url }}" class="card-img-top" style="height: 300px; width: 100%" alt="{{ article.title }}">
-                <div class="card-body">
-                    <a href="/show/{{ article.id }}"><h5 class="card-title">{{ article.title }}</h5>
-                    <p class="card-text"><img src="{{ article.author.profile.picture }}" height="50" width="50" style="border-radius: 100px; border: 1px solid rgba(29,29,29,0.04);" alt="">{{ article.author.fullName }}</p>
-                    <p class="card-text"><small>Created {{ article.fromNow }}. </small></p>
-                    <p class="card-text">{{ article.description }}</p></a> <br>
-                    <p class="card-text">{% for category in article.categories %}
-                            <i><b>{{ category.name }}</b> {{ category.articles | length }} articles with this category.</i>
-                        {% endfor %}</p>
+
+            <div class="col">
+                <div class="card h-100">
+                    <img src="{{ article.image_url }}" class="card-img-top" style="height: 300px; width: 100%" alt="{{ article.title }}">
+                    <div class="card-body">
+                        <a href="/show/{{ article.id }}"><h5 class="card-title">{{ article.title }}</h5>
+                            <p class="card-text"><img src="{{ article.author.profile.picture }}" height="50" width="50" style="border-radius: 100px; border: 1px solid rgba(29,29,29,0.04);" alt="">{{ article.author.fullName }}</p>
+                            <p class="card-text"><small>Created {{ article.fromNow }}. </small></p>
+                            <p class="card-text">{{ article.description }}</p></a> <br>
+                        <p class="card-text">{% for category in article.categories %}
+                                <i><b>{{ category.name }}</b> {{ category.articles | length }} articles with this category.</i>
+                            {% endfor %}</p>
+                    </div>
                 </div>
             </div>
-        </div
+
 
     {% endfor %}
+    </div>
 
 
 
