--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -26,14 +26,24 @@
         </tbody>
     </table>
 
-    <div>
-        <h2>All articles with this category:</h2>
-        <ul>
-        {% for article in category.articles %}
-            <li><a href="/show/{{ article.id }}">{{ article.title }}</a></li>
-        {% endfor %}
-        </ul>
+    <h2>All articles in this category:</h2>
+<div class="row row-cols-1 row-cols-md-4 g-4">
+    {% for article in category.articles %}
+
+
+    <div class="col">
+        <div class="card h-100">
+            <img src="{{ article.image_url }}" class="card-img-top" style="height: 300px; width: 100%" alt="{{ article.title }}">
+            <div class="card-body">
+                <a href="/show/{{ article.slug }}"><h5 class="card-title">{{ article.title }}</h5>
+                    <p class="card-text"><img src="{{ article.author.profile.picture }}" height="50" width="50" style="border-radius: 100px; border: 1px solid rgba(29,29,29,0.04); margin-right: 10px;" alt="">{{ article.author.fullName }}</p>
+                    <p class="card-text"><small>Created {{ article.fromNow }}. </small></p>
+                    <p class="card-text">{{ article.description }}</p></a> <br>
+            </div>
+        </div>
     </div>
 
+    {% endfor %}
+</div>
     <a href="/">Back to the homepage</a>
 {% endblock %}
