Added the contact form. Created the flash message and added the requirements with Symfony.

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,4 +1,12 @@
 @import "css/HomePage.css";
 @import "css/navbar.css";
 @import "css/footer.css";
+@import "css/ContactForm.css";
+@import "css/Buttons.css";
 
+
+body    {
+    min-height: 100vh!important;
+    display: flex!important;
+    flex-direction: column!important;
+}
