--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,18 +3,14 @@
 {% block title %}Hello ContactController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div>
+    <h2>Contact us!</h2>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/sdubo/Wildcodeschool/Udemy/EcommerceWithBlog/src/Controller/ContactController.php'|file_link(0) }}">src/Controller/ContactController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/sdubo/Wildcodeschool/Udemy/EcommerceWithBlog/templates/contact/index.html.twig'|file_link(0) }}">templates/contact/index.html.twig</a></code></li>
-    </ul>
+    <p>We love hearing from you! <br>
+        If you have any questions, suggestions, or just need a buddy to talk to, contact us with the form below!</p>
 </div>
+
+    <div class="formContact">
+    {{ form(contact) }}
+    </div>
 {% endblock %}
