--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-center text-white">
+<footer class="T-footer bg-dark text-center text-white" style=" margin-top: auto!important; position: sticky!important;">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
         <!-- Section: Social media -->
