--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -8,7 +8,7 @@
             <ul class="navbar-nav bg-dark">
                 <li class="nav-item active"> <a class="nav-link" href="/">Home </a> </li>
                 <li class="nav-item"><a class="nav-link" href="/contact"> Contact </a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact"> About </a></li>
+                <li class="nav-item"><a class="nav-link" href="/about"> About </a></li>
                 <li class="nav-item"><a class="nav-link" href="/"> Articles </a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Categories</a>
