Added styling to the whole site

--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -1,5 +1,5 @@
 .nav-link  {
-    color: white!important;
+    color: #fecea8!important;
 }
 
 .dropdown-menu {
@@ -7,5 +7,6 @@
 }
 
 .dropdown-item  {
-    color: white!important;
+    color: #fecea8!important;
 }
+
