--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -1,30 +1,30 @@
-<footer class="T-footer bg-dark text-center text-white" style=" margin-top: auto!important; position: sticky!important;">
+<footer class="T-footer bg-dark text-center" style=" margin-top: auto!important; position: sticky!important; color: #fecea8;">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
         <!-- Section: Social media -->
         <section class="mb-4">
             <!-- Facebook -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
             ><i class="fab fa-facebook-f"></i
                 ></a>
 
             <!-- Google -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
             ><i class="fab fa-google"></i
                 ></a>
 
             <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
             ><i class="fab fa-instagram"></i
                 ></a>
 
             <!-- Linkedin -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
             ><i class="fab fa-linkedin-in"></i
                 ></a>
 
             <!-- Github -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
             ><i class="fab fa-github"></i
                 ></a>
         </section>
@@ -33,9 +33,9 @@
     <!-- Grid container -->
 
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); color: #fecea8">
         © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        <a class="footer-link" href="/">T-Store</a>
     </div>
     <!-- Copyright -->
 </footer>
