--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white" style="color: white">
     <div class="container-fluid">
-        <a class="navbar-brand" style="color: white!important;" href="/">T-Store</a>
+        <a class="navbar-brand" href="/"><img src="/assets/images/logos/Logo-T-Store-Square-No-Slogan.png" height="60px" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
