--- a/public/assets/css/Buttons.css
+++ b/public/assets/css/Buttons.css
@@ -3,10 +3,10 @@
     font-family: Roboto, sans-serif;
     font-weight: 0;
     font-size: 14px;
-    color: #fff;
-    background-color: #0fc2aab7;
+    color: #4A4A4A;
+    background-color: #ff847c;
     padding: 10px 30px;
-    border: solid #2a9d8f 2px;
+    border: solid #ff5449 2px;
     border-radius: 50px;
     transition : 1000ms;
     transform: translateY(0);
@@ -21,8 +21,8 @@
     transition : 1000ms;
     padding: 10px 30px;
     transform : translateY(-0px);
-    background-color: #2a9d8f;
-    color: #fbfbfb;
-    border: solid 2px #2a9d8f;
+    background-color: #ff5449;
+    color: #4A4A4A;
+    border: solid 2px #ff847c;
 }
 
