--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -3,12 +3,16 @@
 {% block title %} Blog T-Store {% endblock %}
 
 {% block body %}
-    <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="d-flex justify-content-center mb-5">
+        <img  src="/assets/images/logos/Logo-T-Store-Square.png" width="100%" height="1000px" alt="">
+    </div>
+    
+    <div class="row row-cols-1 row-cols-md-4 g-4" style="margin-right: 0!important;">
     {% for article in articles |slice(0, 100) %}
 
 
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100" style="background-color: #fecea8!important; color: #4A4A4A!important;">
                     <img src="{{ article.image_url }}" class="card-img-top" style="height: 300px; width: 100%" alt="{{ article.title }}">
                     <div class="card-body">
                         <a href="/show/{{ article.slug }}"><h5 class="card-title">{{ article.title }}</h5>
