--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,14 +3,65 @@
 {% block title %}Hello ContactController!{% endblock %}
 
 {% block body %}
-<div>
-    <h2>Contact us!</h2>
+    <section class="vh-90 mt-3 mb-3" style="background-color: #4A4A4A;">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-lg-12 col-xl-11">
+                    <div class="card text-black" style="border-radius: 25px;">
+                        <div class="card-body p-md-5" style="background-color: #fecea8!important;">
+                            <div class="row justify-content-center">
+                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-    <p>We love hearing from you! <br>
-        If you have any questions, suggestions, or just need a buddy to talk to, contact us with the form below!</p>
-</div>
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Contact us!</p>
+                                    <p class="text-center h4 fw-bold mb-5 mx-1 mx-md-4 mt-4">We love hearing from you!</p>
+                                    <p class="text-center mb-5 mx-1 mx-md-4 mt-4"> If you have any questions, suggestions, or just need a buddy to talk to, contact us with the form below!</p>
 
-    <div class="formContact">
-    {{ form(contact) }}
-    </div>
+                                    <form class="mx-1 mx-md-4">
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                {{ form_row(contact.fullName) }}
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                {{ form_row(contact.email) }}
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                {{ form_row(contact.subject) }}
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                {{ form_row(contact.message) }}
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                            {{ form_row(contact.send) }}
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+                                    <img src="/assets/images/logos/Logo-T-Store-Square.png"
+                                         class="img-fluid" alt="Sample image" >
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
