Created the login, logout. Added the login/logout button to the navbar. Created the securities with Symfony for the login/logout

--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -10,3 +10,11 @@
     color: #fecea8!important;
 }
 
+.login  {
+display: flex;
+align-items: center;
+}
+
+.logout a   {
+    margin-left: 10px;
+}
