--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -3,6 +3,7 @@
 @import "css/footer.css";
 @import "css/ContactForm.css";
 @import "css/Buttons.css";
+@import "css/Login.css";
 
 body    {
     min-height: 100vh!important;
