fixed bug in register

--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -22,7 +22,7 @@
         </div> <!-- navbar-collapse.// -->
         {% if app.user %}
             <div class="login logout">
-                Welcome {{ app.user.userIdentifier }} <a class="button ml-2" href="{{ path('app_logout') }}">Logout</a>
+                Welcome {{ app.user.fullName }} <a class="button ml-2" href="{{ path('app_logout') }}">Logout</a>
             </div>
             {% else %}
                 <a class="button ml-2" href="{{ path('app_login') }}">Login</a>
