--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Create a new account{% endblock %}
 
 {% block body %}
-    {{ form_start(registrationForm) }}
+
 <section class="vh-90 mt-3 mb-3" style="background-color: #4A4A4A;">
     <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -15,8 +15,8 @@
 
                                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                                <form class="mx-1 mx-md-4">
-
+                                <div class="mx-1 mx-md-4">
+                                    {{ form_start(registrationForm) }}
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
@@ -48,7 +48,7 @@
                                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                                         {{ form_row(registrationForm.Register) }}
                                     </div>
-                                </form>
+                                </div>
                             </div>
                             <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
