--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -56,7 +56,7 @@
                                         #}
 
                                         <a class="small text-muted" href="#!">Forgot password?</a>
-                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="#!" style="color: #393f81;">Register here</a></p>
+                                        <p class="mb-5 pb-lg-2" style="color: #393f81;"><a href="/register" style="color: #393f81;">Don't have an account? Register here</a></p>
                                         <br>
                                         <a href="#!" class="small text-muted">Terms of use.</a>
                                         <br>
