--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -4,6 +4,7 @@
 @import "css/ContactForm.css";
 @import "css/Buttons.css";
 @import "css/Login.css";
+@import "css/AddArticle.css";
 
 body    {
     min-height: 100vh!important;
