--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Article{% endblock %}
 
 {% block body %}
-    <h1>Create new Article</h1>
+    <h1 class="d-flex justify-content-center" style="color: #fecea8">Create new Article</h1>
 
     {{ include('article/_form.html.twig') }}
 
