--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Content</th>
-                <td>{{ article.content }}</td>
+                <td>{{ article.content|raw }}</td>
             </tr>
             <tr>
                 <th>Image_url</th>
