--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -17,7 +17,7 @@
         </div>
 
         <div class="articleContent">
-            {{ article.content }}
+            {{ article.content|raw }}
         </div>
 
 
