--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -3,11 +3,84 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
-    <h1>Edit Article</h1>
+    <h1 class="d-flex justify-content-center" style="color: #fecea8">Edit Article</h1>
 
-    {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
+    <section class="vh-90 mt-3 mb-3" style="background-color: #4A4A4A; color:#fecea8!important">
+        <div class="container h-100 d-flex justify-content-between">
+            <div class="mx-1 mx-md-4" style="width:60%">
+                {{ form_start(form) }}
+                <div class="d-flex flex-row align-items-center mb-4">
+                    <div class="form-outline flex-fill mb-0">
+                        {{ form_row(form.title) }}
+                        {{ form_row(form.description) }}
+                    </div>
+                </div>
+                <div class="d-flex flex-row align-items-center mb-4">
+                    <div class="form-outline flex-fill mb-0">
+                        {% if article.id is null %}
+                            {{ form_row(form.imageFile) }}
+                        {% else %}
+                            {{ form_row(form.imageFile, {'required': false}) }}
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="d-flex flex-row align-items-center mb-4">
+                    <div class="form-outline flex-fill mb-0">
+                        {{ form_row(form.categories) }}
+                    </div>
+                </div>
+                <div class="d-flex flex-row align-items-center mb-4">
+                    <div class="form-outline flex-fill mb-0">
+                        {{ form_row(form.content) }}
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                    {{ form_row(form.Add) }}
+                </div>
+            </div>
+            {{ form_end(form) }}
+            <div class="col-md-10 col-lg-6 col-xl-7 d-flex justify-content-end order-1 order-lg-2 " style="max-width: 500px; margin-left: 20px;">
+                {% if article.image_url %}
+                    <img src="{{ article.image_url }}" class="uploadedPhoto img-fluid" alt="Sample image" style="height: fit-content!important;" alt="Article Image">
+                {% else %}
+                    <img id="uploadedPhoto" src="/assets/images/logos/Logo-T-Store-Square.png" class="uploadedPhoto img-fluid" alt="Sample image" style="height: fit-content!important;">
+                {% endif %}
+
+            </div>
+        </div>
+    </section>
+
 
     <a href="{{ path('app_article_index') }}">back to list</a>
+{% endblock %}
 
-    {{ include('article/_delete_form.html.twig') }}
+{% block javascript %}
+<script>
+    $(document).ready(function() {
+    $('.categoryChoices').select2()
+});
+
+    CKEDITOR.replace( 'article_content' );
+
+</script>
+
+<script>
+    const fileInput = document.getElementById('article_imageFile');
+    const existingImage = document.getElementById('uploadedPhoto');
+
+    // Add event listener for file input change
+    fileInput.addEventListener('change', function(event) {
+    const selectedFile = event.target.files[0];
+    if (selectedFile) {
+    const reader = new FileReader();
+    reader.onload = function() {
+    existingImage.src = reader.result;
+};
+
+    reader.readAsDataURL(selectedFile);
+}
+});
+
+</script>
+
 {% endblock %}
