--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white" style="color: white">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="/assets/images/logos/Logo-T-Store-Square-No-Slogan.png" height="60px" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
@@ -19,13 +19,25 @@
                     </ul>
                 </li>
             </ul>
-        </div> <!-- navbar-collapse.// -->
-        {% if app.user %}
-            <div class="login logout">
-                Welcome {{ app.user.fullName }} <a class="button ml-2" href="{{ path('app_logout') }}">Logout</a>
-            </div>
+        </div>
+
+        <div class="login logout" style="color: #fecea8">
+            {% if app.user %}
+                <p style="margin-top:unset!important; margin-bottom: unset!important;">Welcome {{ app.user.fullName }}</p>
+                <div class="dropdown">
+                    <a style="margin-right: 10px" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-user fa-lg" style="color: #fecea8;"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">My Account</a>
+                        <a class="dropdown-item" href="/account/articles">My articles</a>
+                        <a class="dropdown-item" href="/logout">Log Out</a>
+                    </div>
+                </div>
             {% else %}
-                <a class="button ml-2" href="{{ path('app_login') }}">Login</a>
-        {% endif %}
-    </div> <!-- container-fluid.// -->
+                <a href="/login"><i class="fas fa-user fa-lg" style="color: #fecea8; margin-right: 10px"></i></a>
+                <a class="button ml-2" href="{{ path('app_register') }}">Sign up!</a>
+            {% endif %}
+        </div>
+    </div>
 </nav>
