--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -53,7 +53,7 @@
                             <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
                                 <img src="/assets/images/logos/Logo-T-Store-Square.png"
-                                     class="img-fluid" alt="Sample image" style="margin-top: 50px">
+                                     class="img-fluid" style="margin-left: -10px" alt="Sample image" style="margin-top: 50px">
 
                             </div>
                         </div>
