--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,15 +16,11 @@
                 <div class="col col-xl-10">
                     <div class="card" style="border-radius: 1rem;">
                         <div class="row g-0" style="background-color: #fecea8" >
-                            <div class="col-md-6 col-lg-5 d-flex align-items-center">
-                                <img src="/assets/images/logos/Logo-T-Store-Square.png"
-                                     alt="login form" class="img-fluid" />
-                            </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
 
 
-                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login</p>
 
                                         <div class="form-outline mb-4">
                                             <input type="email" value="{{ last_username }}" name="email" id="inputEmail"  class="form-control form-control-lg" autocomplete="email" required autofocus>
@@ -40,7 +36,7 @@
                                            value="{{ csrf_token('authenticate') }}"
                                         >
 
-                                        <div class="pt-1 mb-4">
+                                        <div class="pt-1 mb-4 d-flex justify-content-center">
                                             <button class="button" type="submit">Login</button>
                                         </div>
 
@@ -58,11 +54,14 @@
                                         <a class="small text-muted" href="#!">Forgot password?</a>
                                         <p class="mb-5 pb-lg-2" style="color: #393f81;"><a href="/register" style="color: #393f81;">Don't have an account? Register here</a></p>
                                         <br>
-                                        <a href="#!" class="small text-muted">Terms of use.</a>
-                                        <br>
+                                        <a href="#!" class="small text-muted" style="margin-right: 20px">Terms of use</a>
                                         <a href="#!" class="small text-muted">Privacy policy</a>
 
                                 </div>
+                            </div>
+                            <div class="col-md-6 col-lg-5 d-flex align-items-center" >
+                                <img style="margin-left: -10px" src="/assets/images/logos/Logo-T-Store-Square.png"
+                                     alt="login form" class="img-fluid" />
                             </div>
                         </div>
                     </div>
