Added a pagination, for the moment only implemented in the home page, but accesible for the Article page, and possible with some small adjustments to the other pages.

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -5,6 +5,7 @@
 @import "css/Buttons.css";
 @import "css/Login.css";
 @import "css/AddArticle.css";
+@import "css/Pagination.css";
 
 body    {
     min-height: 100vh!important;
