--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -34,6 +34,12 @@
     {% endfor %}
     </div>
 
-
+    <div class="container mt-2" >
+        <div class="row">
+            <div class="d-flex align-items-center justify-content-center" >
+                {{ knp_pagination_render(articles) }}
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
