--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -4,15 +4,15 @@
 
 {% block body %}
     <div class="d-flex justify-content-center mb-5">
-        <img  src="/assets/images/logos/Logo-T-Store-Square.png" width="100%" height="1000px" alt="">
+        <img  src="/assets/images/logos/Logo-T-Store-Square.png" width="100%" height="800px" alt="">
     </div>
     
-    <div class="row row-cols-1 row-cols-md-4 g-4" style="margin-right: 0!important;">
+    <div class="row row-cols-1 row-cols-md-4 g-4" style="margin-right: 0!important; padding-left: 10px;">
     {% for article in articles |slice(0, 100) %}
 
 
             <div class="col">
-                <div class="card h-100" style="background-color: #fecea8!important; color: #4A4A4A!important;">
+                <div class="card h-100" style="background-color: #ffeada!important; color: #4A4A4A!important;">
                     <img src="{{ article.image_url }}" class="card-img-top" style="height: 300px; width: 100%" alt="{{ article.title }}">
                     <div class="card-body">
                         <a href="/show/{{ article.slug }}"><h5 class="card-title">{{ article.title }}</h5>
@@ -34,7 +34,7 @@
     {% endfor %}
     </div>
 
-    <div class="container mt-2" >
+    <div class="container mt-4" >
         <div class="row">
             <div class="d-flex align-items-center justify-content-center" >
                 {{ knp_pagination_render(articles) }}
