--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -4,14 +4,14 @@
 
 {% block body %}
     <div>
-    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4" style="color:#ffeada;">Articles with the category: {{ category.name }}</p>
+    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4" style="color:#fecea8; padding-left: 10px;">Articles with the category: {{ category.name }}</p>
 
 <div class="row row-cols-1 row-cols-md-4 g-4">
     {% for article in category.articles %}
 
 
     <div class="col">
-        <div class="card h-100" style="background-color: #fecea8!important; color: #4A4A4A!important;">
+        <div class="card h-100" style="background-color: #ffeada!important; color: #4A4A4A!important;">
             <img src="{{ article.image_url }}" class="card-img-top" style="height: 300px; width: 100%" alt="{{ article.title }}">
             <div class="card-body">
                 <a href="/show/{{ article.slug }}"><h5 class="card-title">{{ article.title }}</h5>
@@ -24,5 +24,13 @@
 
     {% endfor %}
 </div>
+    </div>
+
+    <div class="container mt-4" >
+        <div class="row">
+            <div class="d-flex align-items-center justify-content-center" >
+                {{ knp_pagination_render(articles) }}
+            </div>
+        </div>
     </div>
 {% endblock %}
