Created the profile page, deleted unnecassary tables in the database, profile page is now completly updatable.

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -50,10 +50,12 @@
                                     </div>
                                 </div>
                             </div>
+
+                            {{ form_rest(registrationForm) }}
                             <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
                                 <img src="/assets/images/logos/Logo-T-Store-Square.png"
-                                     class="img-fluid" style="margin-left: -10px" alt="Sample image" style="margin-top: 50px">
+                                     class="img-fluid" style="margin-left: -10px; margin-top: 50px" alt="Sample image" >
 
                             </div>
                         </div>
