--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -29,7 +29,7 @@
                         <i class="fas fa-user fa-lg" style="color: #fecea8;"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">My Account</a>
+                        <a class="dropdown-item" href="/account/user/{{ app.user.id }}">My Account</a>
                         <a class="dropdown-item" href="/account/articles">My articles</a>
                         <a class="dropdown-item" href="/logout">Log Out</a>
                     </div>
