Created the comment section and the comment form. The whole section is now fully functional.

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -6,6 +6,7 @@
 @import "css/Login.css";
 @import "css/AddArticle.css";
 @import "css/Pagination.css";
+@import "css/comments.css";
 
 body    {
     min-height: 100vh!important;
