--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -44,7 +44,7 @@
 
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                                    <img src="{{ user.profile_photo }}"
+                                    <img src="/assets/images/Profile/{{ user.profile_photo }}"
                                          class="img-fluid" style="margin-left: -10px; margin-top: 50px" alt="Sample image" >
                                 </div>
                             </div>
